replaced configparser.ConfigParser with configparser.RawConfigParser for cross platform

--- a/example.ini
+++ b/example.ini
@@ -5,7 +5,7 @@
 # host=0.0.0.0 		# to accept connections from anybody (including localhost) e.g. production
 # host=localhost 	# to only accept connections from your local machine e.g. testing
 
-host=localhost
+host=0.0.0.0
 
 # Port to serve web pages
 
